ポップアップのボタンを大きくして，背景を押してもポップアップを消えないように

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,9 @@ body.open_popup .bg_onetime_popup {
     text-align: center;
 }
 
+  /* ボタンを大きくするスタイル */
+  .languageButton {
+    font-size: 36px;
+    padding: 10px 20px;
+    margin: 5px;
+  }
